--- a/script.html
+++ b/script.html
@@ -1,9 +1,4 @@
-<!doctype html>
-<html lang="en">
-
-<meta charset="utf-8">
-<title>Monaco editor with pyodide (dev of https://www.matan-h.com/python-editor)</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--title+head-->
 
 <link rel="stylesheet" data-name="vs/editor/editor.main"
     href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.29.1/min/vs/editor/editor.main.min.css">
@@ -21,14 +16,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.29.1/min/vs/editor/editor.main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.29.1/min/vs/basic-languages/python/python.js">
 </script>
-
-<body>
-  <div id="container" style="height:400px;border:1px solid black;"></div>
-  <button id="run"> run </button>
-  <div>Output:</div>
-  <textarea id="output" style="width: 100%;" rows="6" disabled></textarea>
-  <div id="code-error"></div>
-
+<!--body-->
 
 
   <script>
@@ -116,4 +104,4 @@
     }
     $(main)
   </script>
-</body></html>
+<!--end-->
